Bug 1655132 - printf nsresult using PRIx32 and static_cast in a few places in nsImapProtocol.cpp. r=mkmelin